# RAHT-3DGS-codec

./: .gitignore  .gitmodules
cuda/: .gitignore  MERGE_CLUSTER_README.md  README.md  VOXELIZATION_GUIDE.md  build_merge_cluster.py  merge_cluster.cu  merge_cluster.py  merge_cluster_wrapper.cu  pyproject.toml  rebuild.sh  setup.py  setup_merge_cluster.py  test_merge_cluster.py  test_real_3dgs.py  voxelize_pc.py
cuda/merge_cluster_cuda/: __init__.py
docs/: voxelization.md
matlab/: encode_debug.m  encode_ply.m  encoder_RAHT_RLGR.m  is_frame_morton_ordered.m  read_ply_file.m  voxelizePC.m
matlab/RAHT/: RAHT.m  RAHT_param.m  iRAHT.m
python/: COMPRESS_TO_NVOX.md  RAHT.py  RAHT_param.py  RAHT_param2.py  crosscheck.py  data_util.py  encode.py  encode_3dgs.py  encode_3dgs_debug.py  encode_dataset.py  encode_dataset_1.py  encode_debug.py  encode_ply.py  iRAHT.py  quality_eval.py  test_compress_to_nvox.py  test_compress_to_nvox_with_delta.py  test_merge_all_attributes.py  test_voxelize_3dgs.py  utils.py  voxelize.py  voxelize_pc.py
python/PyRLGR/src/libs/rlgr/: CMakeLists.txt  bindings.cpp  file.cpp  membuf.cpp  membuf.h
scripts/: check_morton.py  compare_mat.py  plot_runtime.py  summarize_pipeline_runtime.py
src/libs/rlgr/: file.h
